test/org/midica/testfiles/failing/eff-func-tune-coarse-invalid-4.midica
INCLUDE inc/instruments.midica


0: coarse_tune.set(+3.5)
